src/index.css
/* ... */
a {
    text-decoration: none;
    color: inherit;
}

.nav-header {
    width: 100%;
    height: 50px;
    display: flex;
    align-items: end;
    justify-content: center;
    z-index: 999;
    position: fixed;
    background: rgba(9, 9, 9, 0.7);
    backdrop-filter: blur(10px);
}

.nav-buttons-container {
    position: relative;
}

.nav-buttons-wrapper {
    height: 50px;
    display: flex;
    align-items: center;
    padding: 0 5px 0 5px;
}

.nav-btn {
    cursor: pointer;
    border: none;
    font-family: var(--font-family-secondary), serif;
    font-weight: 400;
    font-size: 0.85rem;
    position: relative;
    justify-self: center;
    color: var(--Grey-500);
    padding: 0 15px;
}

.nav-btn.active, .nav-btn:hover {
    color: var(--Text-color-Heading);
}

.hamburger-bun {
    border-radius: 10px;
    overflow: hidden;
}

.hamburger {
    position: fixed;
    width: 25px;
    height: 25px;
    padding: 8px;
    top: 25px;
    right: 18px;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 9000;
    border-radius: 10px;
    background: rgba(9, 9, 9, 0.7);
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
}

.hamburger-slices {
}

.hamburger-slice {
    width: 20px;
    height: 0.1rem;
    background: var(--Grey-500);
    border-radius: 7px;
    margin: 6px 0;
}


.mobile-side-menu {
    position: fixed;
    right: -250px;
    height: 100vh;
    width: 250px;
    background: rgba(9, 9, 9, 0.7);
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    transition: right 0.5s ease-in-out;
    z-index: 9999;
}

.mobile-side-menu.expanded {
    right: 0;
}

.mobile-side-menu-wrapper {
    position: relative;
}

.close-menu-icon {
    position: absolute;
    right: 30px;
    top: 35px;
    cursor: pointer;
}

.side-menu-nav-btns {
    padding: 150px 0 0 40px;
}

.side-menu-nav-btn {
    padding: 0 0 20px 0;
    font-family: var(--font-family-secondary), serif;
    font-size: 1rem;
    cursor: pointer;
}

.side-menu-nav-btn.active, .side-menu-nav-btn:hover {
    color: var(--Text-color-Heading);
}

.logo-icons-wrapper {
    display: flex;
    align-items: center;
}

.logo-container {
    width: 44px;
    height: 44px;
    border-radius: 12px;
    background: var(--Basic-600);
    margin-right: 16px;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}

.social-icon {
    margin-top: 4px;
    transition: transform 0.3s ease-in-out;
}

.logo-container:hover .social-icon {
    transform: scale(1.2);
}

.landing-section {
    position: relative;
    display: flex;
    padding: 0 168px;
    align-items: center;
    justify-content: center;
    height: 100vh;
}

.lang-switcher {
    z-index: 9999;
    position: fixed;
    top: 9px;
    right: 9vw;
    font-size: 0.85rem;
}

.lang-switcher-mobile-container {
    z-index: 9999;
    position: fixed;
    font-size: 0.85rem;
    top: 15px;
    right: 40px;
}

.lang-switcher-mobile-container.side-menu {
    z-index: 9999;
    position: absolute;
    font-size: 0.85rem;
    top: 35px;
    left: 40px;
}

.lang-switcher-btn {
    display: inline-block;
    padding: 5px 0;
    cursor: pointer;
    font-weight: 400;
    margin: 0 5px;
}

.lang-switcher-btn:hover, .active-lng {
    color: var(--font-white);
}

.lang-switcher-mobile {
}

.lang-switcher-mobile-wrapper {
    display: flex;
}

.drop-icon {
    cursor: pointer;
}

.dropped {
    rotate: 180deg;
    margin-top: -10px;
}

.lng-mobile-display, .lng-mobile {
    color: var(--Grey-500);
    font-family: var(--font-family-secondary), serif;
    font-size: 0.85rem;
    font-weight: 400;
    line-height: 20px;
    margin-right: 5px;
    cursor: pointer;
}

.lng-mobile-display:hover, .lng-mobile:hover {
    color: var(--Text-color-Heading);
}

.lng-mobile-display.side-menu {
    font-size: 1rem;
    line-height: 22px;
    color: var(--Text-color-Heading);
}

.lng-mobile.side-menu {
    font-size: 1rem;
    line-height: 22px;
}

.lng-mobile {
    margin: 5px 0;
}

.centered-container {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 10;
}

.centered-container-wrapper {
    text-align: center;
    width: fit-content;
}

.section-header-title {
    color: var(--font-white);
    font-size: 5rem;
    font-weight: 500;
    display: block;
    letter-spacing: -0.8px;
}

.section-header-title.developer {
    line-height: 0.4;
}

.section-header-description {
    display: block;
    color: var(--Grey-500);
    font-weight: 400;
    font-size: 1.25rem;
    font-family: var(--font-family-secondary), serif;
    line-height: 150%;
    padding: 0 20px;
}

.section-header-description.section-header-description.landing {
    margin-top: 50px;
    text-wrap: nowrap;
    padding: 0;
}

.introduction-buttons-wrapper {
    margin-top: 46px;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 15px;
}

.primary-button {
    padding: 8px 10px;
    cursor: pointer;
    border-radius: 10px;
    color: var(--font-black);
    background: var(--Orange-500);
    max-width: fit-content;
    font-size: 0.85rem;
    font-family: var(--font-family-secondary), serif;
}

.primary-button.big {
    padding: 10px 12px;
    font-size: 1rem;
    border-radius: 12px;
}

.primary-button.spaced {
    margin-left: 16px;
}

.primary-button.inactive {
    color: var(--font-white);
    background: var(--Basic-600);
}

.primary-button.inactive:hover {
    color: var(--font-black);
    background: var(--Orange-500);
}

.primary-button.deactivated {
    background: var(--Grey-500);
    color: var(--font-black);
    cursor: not-allowed;
}
/* ... */

